--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,11 @@ a:hover {
 	text-decoration-color: #FF5440;
 }
 
-#pub {
+#content ul {
 	list-style-type: none;
 }
-#pub li{
+
+#content ul li{
 	padding-top: 1%;
 }
 
@@ -61,6 +62,6 @@ a:hover {
 		font-size:5vw;
 	}
 	#nav ul {
-		font-size: 3vw;
+		font-size: 2.5vw;
 	}
 }
