--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,22 @@ body {
 	text-decoration-color: #FFFFFF;
 }
 
+div {
+	animation-duration: 1s;
+	animation-name: appear;
+}
+
 #navbar a {
 	color:#0083C2;
+	text-decoration: underline;
+	text-decoration-color: #FFFFFF;
 }
 
 #navbar a:hover {
 	color:#0083C2;
+	text-decoration: underline;
 	text-decoration-color: #FF5440;
-	text-decoration-thickness: 0.2rem;
+	transition: text-decoration 1s ease;
 }
 
 #navbar ul {
@@ -37,13 +45,11 @@ body {
 #navbar ul .active{
 	text-decoration: underline;
 	text-decoration-color: #FF5440;
-	text-decoration-thickness: 0.2rem;
 }
 
 #navbar ul .inactive{
 	text-decoration: underline;
 	text-decoration-color: #FFFFFF;
-	text-decoration-thickness: 0.2rem;
 }
 
 #pub li {
@@ -112,3 +118,12 @@ body {
 		padding-left: 0;
 	}
 }
+
+@keyframes appear {
+	0% {
+	  opacity: 0;
+	}
+	100% {
+	  opacity: 1;
+	}
+  }
