--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,8 @@ div {
 #contentList li {
     padding-left: 1.5em;
 	text-indent:-1.5em;
+	padding-bottom: 1em;
+	line-height: 1.5em;
 }
 
 #contentList a {
