--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ div {
 	line-height: 1.5em;
 }
 
-.grayed {
+.journal {
 	color:var(--color-light);
 }
 
@@ -119,7 +119,12 @@ div {
 
 	#content {
 		padding-top:5vw;
+		font-size:1em;
 	}
+	.gray {
+		font-size:0.85em;
+	}
+
 	
 }
 
