--- a/css/mainIsing.css
+++ b/css/mainIsing.css
@@ -5,8 +5,9 @@
   
   /* The slider itself */
   .slider {
-    width: 60%; /* Full-width */
+    width: 30%; /* Full-width */
     height: 25px; /* Specified height */
+    background-color: var('--color-bkg');
   }
   
 #svgDiv {
@@ -19,15 +20,6 @@ svg {
   margin: auto;
 }
 
-@media (max-width: 576px) { 
-  svg {
-    display: block;
-    margin: auto;
-  }
-
-
-@media (max-width: 768px) and (min-width:576px) { 
-}
 
 @media (min-width: 768px) { 
 }
