--- a/css/index.css
+++ b/css/index.css
@@ -69,6 +69,12 @@ div {
 	margin:0;
 }
 
+img {
+	transition: transform .7s ease-in-out;
+  }
+  img:hover {
+	transform: rotate(360deg);
+  }
 #main {
 	display:flex;
 }
